objects/ssot__PartyProfileAddress__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AddressId__c</fullName>
        <label>Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AddressVerificationStatus__c</fullName>
        <label>Address Verification Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Profile Address Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCurrentAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsNegativeAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is High Risk Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPermanentAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Permanent Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Party Profile Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyProfileAddressType__c</fullName>
        <label>Party Profile Address Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyProfileId__c</fullName>
        <label>Party Profile</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidityEndDate__c</fullName>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ValidityStartDate__c</fullName>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationDate__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658775092_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyProfileAddress_AddressId_map_Ad_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>PartyProfileAddress_AddressId_map_Ad_rel</relationshipLabel>
        <relationshipName>rel_1731658775092_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659067693_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyProfileAddress_PartyProfileId_m_rel</label>
        <referenceTo>ssot__PartyProfile__dlm</referenceTo>
        <relationshipLabel>PartyProfileAddress_PartyProfileId_m_rel</relationshipLabel>
        <relationshipName>rel_1731659067693_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>